--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,7 @@ body {
 }
 
 #controls {
+	opacity: 0.4;
     position: absolute;
     top: 10px;
     left: 10px;
@@ -16,6 +17,11 @@ body {
     padding: 10px;
     border-radius: 5px;
     z-index: 10;
+    box-shadow: -1px 5px 5px black;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.8));
+	border: 2px solid rgba(0, 0, 0, 0.2);
+	transform: scale(0.999);
+	transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 #controls label {
@@ -23,17 +29,60 @@ body {
 }
 
 #controls input {
-    margin-left: 10px;
+    margin-left: 2px;
     padding: 5px;
     font-size: 14px;
     width: 300px;
+    border-radius: 5px;
+}
+
+#apply:hover {
+	transform: scale(1.1);
+	transition: transform 0.3s ease;
 }
 
 #controls button {
     margin-left: 10px;
     padding: 5px 10px;
-    font-size: 14px;
     cursor: pointer;
+}
+
+#sliders {
+    opacity: 0.4;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: rgba(255, 255, 255, 0.8);
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 10;
+    font-size: 14px;
+    box-shadow: -1px 5px 5px black;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.8));
+	border: 2px solid rgba(0, 0, 0, 0.2);
+	transform: scale(0.999);
+	transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+#sliders label {
+    display: block;
+    text-align: center;
+}
+
+#sliders input[type="range"] {
+    width: 100%;
+}
+
+#sliders span {
+    display: block;
+    text-align: center;
+    font-size: 12px;
+}
+
+#controls:hover,
+#sliders:hover {
+	opacity: 0.8;
+	transform: scale(1);
 }
 
 #canvas-container {
