--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,7 +50,7 @@ body {
 #sliders {
     opacity: 0.4;
     position: absolute;
-    top: 10px;
+    bottom: 10px;
     right: 10px;
     background: rgba(255, 255, 255, 0.8);
     padding: 10px;
