--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,6 @@ body {
 }
 
 #controls {
-	opacity: 0.4;
     position: absolute;
     top: 10px;
     left: 10px;
@@ -20,8 +19,6 @@ body {
     box-shadow: -1px 5px 5px black;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.8));
 	border: 2px solid rgba(0, 0, 0, 0.2);
-	transform: scale(0.999);
-	transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 #controls label {
@@ -36,11 +33,6 @@ body {
     border-radius: 5px;
 }
 
-#apply:hover {
-	transform: scale(1.1);
-	transition: transform 0.3s ease;
-}
-
 #controls button {
     margin-left: 10px;
     padding: 5px 10px;
@@ -48,10 +40,9 @@ body {
 }
 
 #sliders {
-    opacity: 0.4;
     position: absolute;
     bottom: 10px;
-    right: 10px;
+    left: 10px;
     background: rgba(255, 255, 255, 0.8);
     padding: 10px;
     border-radius: 5px;
@@ -60,8 +51,6 @@ body {
     box-shadow: -1px 5px 5px black;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.8));
 	border: 2px solid rgba(0, 0, 0, 0.2);
-	transform: scale(0.999);
-	transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 #sliders label {
