--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,8 @@ body {
 	position: absolute;
 	top: 10px;
 	left: 10px;
+    width: 90%;
+    max-width: 600px;
 	background: rgba(255, 255, 255, 0.8);
 	padding: 10px;
 	border-radius: 5px;
@@ -28,9 +30,10 @@ body {
 #controls input {
 	margin-left: 2px;
 	padding: 5px;
-	font-size: 14px;
-	width: 300px;
 	border-radius: 5px;
+    font-size: 16px;
+    width: calc(100% - 110px);
+    max-width: 590px;
 }
 
 #controls button {
